exports[`BpkCard should render BpkCardSimple 1`] = `
<div
  className="bpk-card bpk-card--padded"
  role="button">
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</div>
`;

exports[`BpkCard should render BpkCardTicket with a "stub" attribute 1`] = `
<div
  className="bpk-card-ticket bpk-card-ticket--padded bpk-card-ticket--horizontal"
  role="button">
  <div
    className="bpk-card-ticket__main">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    className="bpk-card-ticket__punchline">
    <div
      className="bpk-card-ticket__notch--start" />
    <div
      className="bpk-card-ticket__notch--end" />
  </div>
  <div
    className="bpk-card-ticket__stub">
    Ticket stub
  </div>
</div>
`;
